# dreamagent

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  FAQ.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  mypy.ini  pyproject.toml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  tuning_recipe.md
.github/workflows/: ci.yml
benchmarks/: README.md  __init__.py  _common.py  cross_memory_reasoning.py  general_capability.py  identity_drift.py  personal_recall.py  query_latency.py  three_way.py  vs_baselines.py
benchmarks/baselines/: __init__.py  retrieval.py
benchmarks/probes/: adversarial_retrieval.jsonl  cross_memory_reasoning.jsonl
benchmarks/results/: cross_memory_reasoning-2026-05-27T17-10-17.600037+00-00.json  general_capability-2026-05-27T17-09-15.198955+00-00.json  identity_drift-2026-05-27T17-12-02.504451+00-00.json  personal_recall-2026-05-27T17-07-50.221055+00-00.json  query_latency-2026-05-27T17-11-17.788459+00-00.json  three_way-2026-05-27T18-31-26.125962+00-00.json  three_way_detail-2026-05-27T18-31-26.125962+00-00.json  vs_baselines-2026-05-27T17-51-04.920048+00-00.json  vs_baselines-2026-05-27T23-00-10.179210+00-00.json  vs_baselines-2026-05-27T23-19-05.531246+00-00.json
docs/: ARCHITECTURE.md  METHODOLOGY.md  PAPER.md
docs/adr/: 001-apache-2.0-with-notice-attribution.md  002-pydantic-v2-strict-schema.md  003-mlx-lm-via-subprocess.md  004-eval-gated-promotion.md  005-stable-anchor-selection.md  006-llama-3.2-1b-validation-tier.md  007-parametric-vs-retrieval-positioning.md  008-morpheus-methodology-name.md  README.md  _template.md
docs/comparison/: README.md  vs-giant-context.md  vs-letta.md  vs-mem0.md  vs-supermemory.md  vs-zep.md
docs/research/: 2026-05-improving-memory.md  README.md  path-b-memory-specialist.md
docs/tuning/: README.md  llama-3.1-8b-instruct-4bit.md  llama-3.2-1b-instruct-4bit.md  oplora-k32-validation.md  qwen3-0.6b-4bit.md  smft-s10-validation.md  v2.1-vs-baselines.md  v2.2-adversarial-and-composed.md
examples/: README.md
examples/00-five-minutes/: README.md
examples/01-quickstart/: README.md  run.sh
examples/02-extract-from-chat/: README.md  sample.txt
examples/03-nightly-cron/: README.md
examples/04-bridge-from-mem0/: README.md  convert.py
examples/05-rollback-drill/: README.md
examples/06-benchmark-suite/: README.md
examples/07-mcp-memory-backend/: README.md
examples/08-mem0-plus-dreamagent/: README.md  seed_mem0.py
fixtures/: v1_baseline.jsonl
fixtures/anchors/: general_anchor.jsonl  general_eval.jsonl
src/dreamagent/: __init__.py  cli.py  schema.py
src/dreamagent/compose/: __init__.py  anchors.py  examples.py  mix.py  templates.py
src/dreamagent/eval/: __init__.py  runner.py
src/dreamagent/extract/: __init__.py  base.py  pipeline.py  prompt.py
src/dreamagent/extract/backends/: anthropic.py  ollama.py  openai.py
src/dreamagent/ingest/: __init__.py  base.py  fixture.py  jsonl.py
src/dreamagent/promote/: __init__.py  gate.py  snapshot.py
src/dreamagent/serve/: __init__.py  mcp.py
src/dreamagent/train/: __init__.py  config.py  oplora.py  oplora_load.py  oplora_runner.py  runner.py  smft.py  smft_runner.py
tests/: test_compose_anchors.py  test_compose_examples.py  test_compose_mix.py  test_eval_runner.py  test_extract_pipeline.py  test_ingest.py  test_oplora.py  test_promote.py  test_schema.py  test_serve_mcp.py  test_smft.py  test_train_runner.py
