[project]
name = "dreamagent"
version = "0.0.1"
description = "Nightly LoRA consolidation of agent memories into model weights."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "mrdulasolutions" }]

dependencies = [
    "pydantic>=2.9",
    "typer>=0.15",
    "rich>=13.9",
    "mlx-lm>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.13",
]

[project.scripts]
dreamagent = "dreamagent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dreamagent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
