[project]
name = "dreamagent"
version = "0.0.1"
description = "Nightly LoRA consolidation of agent memories into language model weights — the dreaming AI."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Mr Dula Solutions", email = "noreply@mrdula.solutions" }]
keywords = [
    "lora", "fine-tuning", "agent-memory", "continual-learning",
    "catastrophic-forgetting", "mlx", "apple-silicon", "llm",
    "parametric-memory", "knowledge-consolidation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.9",
    "typer>=0.15",
    "rich>=13.9",
    "mlx-lm>=0.22",
]

[project.urls]
Homepage = "https://github.com/mrdulasolutions/dreamagent"
Repository = "https://github.com/mrdulasolutions/dreamagent"
Issues = "https://github.com/mrdulasolutions/dreamagent/issues"
Documentation = "https://github.com/mrdulasolutions/dreamagent#readme"
Changelog = "https://github.com/mrdulasolutions/dreamagent/blob/main/CHANGELOG.md"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
ollama = ["ollama>=0.3"]
all-extractors = ["anthropic>=0.40", "openai>=1.50", "ollama>=0.3"]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[project.scripts]
dreamagent = "dreamagent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dreamagent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# typer.Option/.Argument in defaults is the documented API surface, not a bug
"src/dreamagent/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["src/dreamagent"]
omit = [
    "src/dreamagent/extract/backends/*",
    "src/dreamagent/serve/*",
    "src/dreamagent/merge/*",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
